syntax = "proto3";

message ModeStatus {
  repeated Mode modes = 1;
}

message Mode {
  int32 id = 1;
  string name = 2;
  int32 f4 = 4;
  F5 f5 = 5;
}

message F5 {
  int32 f1 = 1;
}
