syntax = "proto3";

message Item {
  string linktype = 4;
}

message SearchAll {

  repeated Item items = 4;
}

