syntax = "proto3";

import "protos/dmView.proto";

message ViewProgress{
  DM dm = 1;
}

message DM{
  repeated CommandDm commandDms = 2;
}
